crates/plotnik-lib/tests/05-typegen/quantifiers/error_enum_internal_capture_needs_row.txt
Bad = [
  A: (identifier) @id
]*
==== diagnostics ====
error: the definition names the list itself, so each `*` element — a labeled alternation — is left without a type name
 --> query.ptk:1:7
  |
1 |   Bad = [
  |  _______^
2 | |   A: (identifier) @id
3 | | ]*
  | |__^
  |
help: name the element type in its own definition, then quantify a reference to it: `Elem = ...` and `(Elem)*`
